fixed overflow problem at mobile nav

--- a/src/app/header-menu/header-menu.component.scss
+++ b/src/app/header-menu/header-menu.component.scss
@@ -172,6 +172,3 @@ svg {
     }
 }
 
-.overflow-hidden{
-    overflow-y: hidden !important;
-}
